# remote_control_device

./: .gitmodules  MIT-LICENSE.txt  README.md
firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  flash_commands.jlink  runAllTests.sh
firmware/doc/: CanFestivalNotes.md  Structure.md  TestingNotes.md  structure.graphml
firmware/fuzzing/: CMakeLists.txt  README.md  TestData.md  buildFuzzApp.sh
firmware/fuzzing/process/: .gitignore  startFuzzing.sh  stopFuzzing.sh
firmware/fuzzing/process/testcase/: goodTestData.data
firmware/fuzzing/src/: main.cpp
firmware/objectDictionary/: .gitignore  RemoteControlDevice.od
firmware/remote_control_device.cubemx/: Makefile  STM32F302R8Tx_FLASH.ld  remote_control_device.cubemx.ioc
firmware/remote_control_device.cubemx/Core/Inc/: FreeRTOSConfig.h  can.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
firmware/remote_control_device.cubemx/Core/Src/: can.c  dma.c  freertos.c  gpio.c  iwdg.c  main.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  tim.c  usart.c
firmware/src/: ANSIEscapeCodes.hpp  Application.cpp  Application.hpp  BuildConfiguration.hpp  FirmwareHasher.cpp  FirmwareHasher.hpp  LEDs.cpp  LEDs.hpp  Logging.cpp  Logging.hpp  SBUSDecoder.cpp  SBUSDecoder.hpp  SBUSProtocol.hpp  SpanCompatibility.hpp  SpecialAssert.cpp  SpecialAssert.hpp
firmware/src/CanFestival/: CanFestivalLocker.cpp  CanFestivalLocker.hpp  CanFestivalLogging.cpp  CanFestivalLogging.h  CanFestivalTimers.cpp  CanFestivalTimers.hpp
firmware/src/CanFestival/canfestival/: applicfg.h  canfestival.h  config.h  timerscfg.h
firmware/src/PeripheralDrivers/: CanIO.cpp  CanIO.hpp  ReceiverModule.cpp  ReceiverModule.hpp  TerminalIO.cpp  TerminalIO.hpp
firmware/src/Statemachine/: Canopen.cpp  Canopen.hpp  HardwareSwitches.cpp  HardwareSwitches.hpp  LEDUpdater.cpp  LEDUpdater.hpp  RemoteControl.cpp  RemoteControl.hpp  State.cpp  State.hpp  StateSources.cpp  StateSources.hpp  Statemachine.cpp  Statemachine.hpp  States.cpp  States.hpp
firmware/src/Wrapper/: HAL.hpp  Sync.cpp  Sync.hpp  Task.cpp  Task.hpp
firmware/stm32_project_base/: FirmwareHashInserter.py  README.md  include.mk
firmware/stm32_project_base/mk/: rules.mk
firmware/stm32_project_base/src/: abi.cpp  build_information.cpp  hash.cpp  std.cpp
firmware/test/: .gdbinit  CMakeLists.txt
firmware/test/fake/: task.cpp
firmware/test/gcc_FreeRTOS_posix_port/: hooks_test.cpp
firmware/test/inc/fake/: Task.hpp
firmware/test/inc/freertos/: FreeRTOSConfig.h  hooks_test.hpp
firmware/test/inc/mock/: CanFestivalTimersMock.hpp  CanIOMock.hpp  CanopenMock.hpp  HALMock.hpp  HardwareSwitchesMock.hpp  LEDUpdaterMock.hpp  LEDsMock.hpp  LoggingMock.hpp  ReceiverModuleMock.h  RemoteControlMock.hpp  StateCallbacksMock.hpp  TerminalIOMock.hpp
firmware/test/src/: CanFestivalTimersTest.cpp  CanIOTest.cpp  HardwareSwitchesTest.cpp  LEDTest.cpp  LEDUpdaterTest.cpp  LoggingTest.cpp  ReceiverModuleTest.cpp  RemoteControlTest.cpp  SBUSDecoderTest.cpp  StatemachineTest.cpp  TerminalIOTest.cpp  TestDataSBUSFrame.cpp  TestDataSBUSFrame.hpp  bitArray.py  main.cpp
firmware/test/src/Canopen/: CanopenTestFixture.cpp  CanopenTestFixture.hpp  ClientNodeStateChangeTest.cpp  CouplingChangeSDOTest.cpp  CouplingChangeSDOTest.hpp  HeartbeatMonitoringTest.cpp  MalformedSyncCrashTest.cpp  MapValueTest.cpp  PDOPublishingTest.cpp
firmware/test/stub/: can.cpp  gpio.cpp  hal.cpp  iwdg.cpp  nvic.cpp  tim.cpp  uart.cpp
hardware/: README.md  elektronikbestellung.ods  elektronikbestellung.xlsx
hardware/3D/: Housing - case bottom v1.step  Housing - case bottom v1.stl  Housing - case top v1.step  Housing - case top v1.stl  Housing fastening Adapter - housing fastening adapter.stl
hardware/adapterBoard/: adapterBoard  adapterBoard-cache.lib  adapterBoard.kicad_pcb  adapterBoard.sch  adapterBoardExtraParts.dcm  adapterBoardExtraParts.lib  fp-lib-table  powerSupply.sch  sym-lib-table
hardware/adapterBoard/bom/: ibom.html
hardware/adapterBoard/extraFootprints.pretty/: alps_SKRPASE010.kicad_mod
hardware/adapterBoard/fab/: adapterBoard-B.Cu.gbr  adapterBoard-B.Mask.gbr  adapterBoard-B.Paste.gbr  adapterBoard-B.SilkS.gbr  adapterBoard-Edge.Cuts.gbr  adapterBoard-F.Cu.gbr  adapterBoard-F.Mask.gbr  adapterBoard-F.Paste.gbr  adapterBoard-F.SilkS.gbr  adapterBoard-NPTH.drl  adapterBoard-PTH.drl
hardware/datasheets/stm-morpho-template-master/template/: fp-lib-table
hardware/datasheets/stm-morpho-template-master/template/STM_Morpho/: STM_Morpho-rescue.lib  STM_Morpho.dsn  STM_Morpho.pro
hardware/datasheets/stm-morpho-template-master/template/nucleo64.pretty/: Pin_Header_Straight_2x19.kicad_mod  nucleo64.kicad_mod
hardware/pictures/: rc_front.xcf
